--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -6,7 +6,7 @@
       rgba(0, 0, 0, 0) 0%,
       rgba(0, 0, 0, 1) 100%
     ),
-    url("https://cdn.hipwallpaper.com/i/98/21/dUyCkp.jpg");
+    url('https://cdn.hipwallpaper.com/i/98/21/dUyCkp.jpg');
   background-size: cover;
   position: relative;
 
@@ -30,6 +30,7 @@
         font-size: 16px;
         font-weight: 500;
         cursor: pointer;
+        z-index: 1;
       }
     }
   }
@@ -68,21 +69,21 @@
       height: 50px;
       border-radius: 5px;
 
-      input{
-          flex: 9;
-          height: 100%;
-          border: none;
-          padding: 0 10px;
+      input {
+        flex: 9;
+        height: 100%;
+        border: none;
+        padding: 0 10px;
       }
 
-      .registerButton{
-          flex: 3;
-          height: 100%;
-          background-color: red;
-          border: none;
-          color: white;
-          font-size: 22px;
-          cursor: pointer;
+      .registerButton {
+        flex: 3;
+        height: 100%;
+        background-color: red;
+        border: none;
+        color: white;
+        font-size: 22px;
+        cursor: pointer;
       }
     }
   }
