--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -61,7 +61,7 @@
       img {
         width: 30px;
         height: 30px;
-        border-radius: 5px;
+        border-radius: 50%;
         object-fit: cover;
         cursor: pointer;
       }
@@ -71,6 +71,7 @@
           display: none;
           background-color: var(--main-color);
           border-radius: 5px;
+          padding: 10px;
         }
 
         span {
@@ -83,6 +84,7 @@
             display: flex;
             flex-direction: column;
             position: absolute;
+            align-items: center;
           }
         }
       }
